fixed font retrieval

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
                         </select>
                     </div>
 
-                    <div>
-                        <label for="font-name">Font Name:</label>
-                        <select id="font-name" class="setting">
-                            <option value="Arial">Arial</option>
-                        </select>
+                    <div style="display: flex; gap: 10px; flex-direction: column;">
+                        <div>
+                            <label for="font-name">Font Name:</label>
+                            <select id="font-name" class="setting">
+                                <option value="Arial">Arial</option>
+                            </select>
+                        </div>
+                        <button id="get-fonts-button">Get local fonts</button>
                     </div>
                 </form>
             </section>
