--- a/index.html
+++ b/index.html
@@ -38,24 +38,14 @@
                         <input type="checkbox" id="inverted" class="setting">
                     </div>
 
-                    <div>
-                        <label for="greyscale-mode">Greyscale Mode:</label>
-                        <select id="greyscale-mode" class="setting">
-                            <option value="luminance">Luminance</option>
-                            <option value="lightness">Lightness</option>
-                            <option value="average">Average</option>
-                            <option value="value">Value</option>
-                        </select>
-                    </div>
-
                     <div style="display: flex; gap: 10px; flex-direction: column;">
                         <div>
-                            <label for="font-name">Font Name:</label>
+                            <label for="font-name">Font:</label>
                             <select id="font-name" class="setting">
                                 <option value="Arial">Arial</option>
                             </select>
                         </div>
-                        <button id="get-fonts-button">Get local fonts</button>
+                        <button id="get-fonts-button">Fetch local fonts</button>
                     </div>
                 </form>
             </section>
